--- a/index.html
+++ b/index.html
@@ -12,5 +12,41 @@
     <img src="img/pexels-bill-emrich-230794-2.jpg" />
 
     <hr />
+     <!--tabella spese-->
+     <h2>Le mie spese</h2>
+
+     <table>
+       <tr>
+         <td><strong>Numero</strong></td>
+         <td style="text-align: center"><strong>Descrizione</strong></td>
+         <td><strong>Costo</strong></td>
+       </tr>
+       <tr>
+         <td>1</td>
+         <td>Biglietto Aereo</td>
+         <td>120 &euro;</td>
+       </tr>
+       <tr>
+         <td>1</td>
+         <td>Biglietto Aereo</td>
+         <td>120 &euro;</td>
+       </tr>
+       <tr>
+         <td>1</td>
+         <td>Biglietto Aereo</td>
+         <td>120 &euro;</td>
+       </tr>
+       <tr>
+         <td>Totale</td>
+         <td></td>
+         <td>360 &euro;</td>
+       </tr>
+     </table>
+ 
+     <hr />
+ 
+    
+   </body>
+ </html>
   </body>
 </html>
