--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
  
      <hr />
  
-    
+     <!--lista cose da fare-->
+     <h3>Cose da fare</h3>
+ 
+     <ul>
+       <li>Visitare la Tower of London &#10007;</li>
+       <li>Visitare greenwich &#10003;</li>
+       <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
+       <li>Mangiare il tipico Fish and Chips inglese &#10007;</li>
+     </ul>
    </body>
  </html>
   </body>
