--- a/index.html
+++ b/index.html
@@ -54,6 +54,36 @@
        <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
        <li>Mangiare il tipico Fish and Chips inglese &#10007;</li>
      </ul>
+
+     <hr />
+
+     <!--lista info utili-->
+     <h3>Info utili:</h3>
+
+     <ol>
+        <li>Numeri utili emergenza
+            <ul>
+                <li><strong>999</strong> - Emergenza</li>
+                <li><strong>101</strong> - Numero polizia</li>
+                <li><strong>111</strong> - Numero assistenza medica</li>
+            </ul>
+        </li>
+        <li>Hotel 
+             <ul>
+            <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+            <li><strong>Indirizzo Hotel</strong>: Westminster, London SW1A 1AA, Regno Unito</li>
+        </ul></li>
+        <li>Aereo</li>
+        <ul>
+            <li><strong>Volo di Andata</strong>: Y1234X, ore 9.30 da Milano Malpensa</li>
+            <li><strong>Volo di Ritorno</strong>: Y1236X, ore 18.30 da London Heathrow</li>
+        </ul></li>
+    </ol>
+
+    <hr />
+
+    
+
    </body>
  </html>
   </body>
